google analytic tag

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,20 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 
-#root, html, body {
+#root,
+html,
+body {
   height: 100vh;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-body{
+body {
   margin: 0;
   background-color: #06283d;
-  
 }
 
-*{
+* {
   box-sizing: border-box;
 }
-
