--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,5 @@
 .app_navbar {
-  padding: 1rem 0;
+  padding-bottom: 0.3rem;
   margin: 0 auto;
 
   .nav__links {
@@ -33,7 +33,7 @@
       text-align: center;
       min-width: 140px;
       list-style: none;
-      background: #244052;
+      background: rgb(37, 192, 227);
       opacity: 0.7;
       border-radius: 15px;
 
