--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,9 @@ html {
 
 body {
   margin: 0;
-  background-color: #06283d;
+  background-color: #2db5d4;
+  // background-color: #02809c;
+  background-blend-mode: overlay;
 }
 
 * {
