--- a/src/App.scss
+++ b/src/App.scss
@@ -3,12 +3,44 @@
 
   &__header {
     position: relative;
-    padding: 1rem 0;
+    padding: 0rem 0;
+
+    &__hero {
+      // background-color: #9cdde8;
+      // padding: 40px 0;
+      overflow: hidden;
+      background-image: linear-gradient(
+          rgba(254, 254, 254, 0.1),
+          rgba(254, 254, 254, 0.1)
+        ),
+        url("./assets/background.webp");
+
+      /* Set a specific height */
+      height: 600px;
+
+      /* Position and center the image to scale nicely on all screens */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+
+      // background-image: url("./assets/background.webp");
+      // background-size: cover;
+      // background-repeat: no-repeat;
+      // background-position: center;
+      // min-height: 600px;
+    }
   }
+}
+.app__main__pricing {
+  position: relative;
+  width: 100%;
+  padding-top: 120px;
+  background-color: #fff;
 }
 
 .section {
-  margin-top: 120px;
+  padding-top: 100px;
   width: 100%;
   position: relative;
 }
@@ -43,20 +75,22 @@
   font-family: "poppins", sans-serif;
   font-style: normal;
   font-weight: 700;
-  color: ghostwhite;
+  color: #2db6d4;
+  // color: black;
 }
 
 .text {
   font-family: "poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
-  color: #8794ba;
+  // color: #8794ba;
+  color: rgb(155, 155, 155);
 }
 
 .img__container {
   width: 600px;
   height: 410px;
-  background-color: #244052;
+  background-color: #fff;
   box-shadow: 0px 18px 50px -15px rgba(25, 42, 89, 0.2);
   border-radius: 30px;
   position: relative;
