--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -2,9 +2,10 @@
   .app__dash__txt__container {
     width: 600px;
     h4 {
-      font-size: 40px;
+      font-size: 35px;
       line-height: 47px;
       margin: 0;
+      font-weight: 600;
     }
     p {
       width: 480px;
@@ -14,7 +15,7 @@
   }
   @media screen and (max-width: 1280px) {
     .app__dash__txt__container {
-      width: 500px;
+      width: 600px;
       p {
         width: 100%;
       }
