--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,24 +1,42 @@
 .app__footer__navbar {
-  border-top: 1px solid #374c58;
-  padding: 3rem 0;
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 3rem 0 5rem;
   margin: 0 auto;
   position: relative;
 
   .logo__container {
-    width: 100px;
-    height: 25px;
     position: relative;
+    cursor: pointer;
 
     img {
-      width: 100%;
-      height: 100%;
+      width: 200px;
+      height: 50px;
+    }
+    h6 {
+      color: ghostwhite;
+      font-size: 22px;
+      font-weight: 600;
+      width: 300px;
+      margin: 10px 0;
+      font-family: "poppins", sans-serif;
+    }
+    p {
+      color: ghostwhite;
+      font-size: 18px;
+      width: 350px;
+      margin: 0;
+      font-family: "poppins", sans-serif;
     }
   }
 
   .footer__nav__links {
     display: flex;
+    flex-direction: column;
     list-style: none;
-    gap: 40px;
+    gap: 20px;
 
     li a {
       width: 49px;
@@ -26,19 +44,23 @@
       font-weight: 400;
       font-size: 14px;
       line-height: 16px;
-      color: #8794ba;
+      color: whitesmoke;
+      text-transform: uppercase;
     }
   }
 
   .socials__container {
+    color: #fff;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 10px;
     padding: 0px;
-    gap: 40px;
-    width: 134.61px;
     height: 30px;
+    cursor: pointer;
     img {
-      width: 24.61px;
+      width: 20px;
       height: 20px;
     }
   }
@@ -53,5 +75,12 @@
       width: 90px;
       height: 25px;
     }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .app__footer__navbar {
+    flex-direction: column;
+    gap: 150px;
   }
 }
