--- a/src/components/Pricing/Pricing.scss
+++ b/src/components/Pricing/Pricing.scss
@@ -23,7 +23,7 @@
     .pricing__card {
       width: 340px;
       height: 440px;
-      background: #244052;
+      background: rgba(42, 182, 212, 1);
       opacity: 0.7;
       box-shadow: 0px 18px 50px -15px rgba(25, 42, 89, 0.2);
       border-radius: 30px;
@@ -38,17 +38,19 @@
           line-height: 35px;
           text-align: center;
           margin-bottom: 0;
+          color: white;
         }
         p {
           font-size: 18px;
           line-height: 150%;
           text-align: center;
           margin: 1rem 0 0;
+          color: white;
         }
       }
       .divider {
         width: 220px;
-        border-bottom: 1px solid #374c58;
+        border-bottom: 1px solid ghostwhite;
         margin: 2rem auto 1rem;
       }
 
@@ -63,7 +65,7 @@
           font-size: 35px;
           line-height: 35px;
           text-align: center;
-          color: #ffffff;
+          color: #fff;
           margin-bottom: 0;
           span {
             font-weight: 400;
@@ -75,6 +77,7 @@
           font-size: 16px;
           line-height: 140%;
           text-align: center;
+          color: ghostwhite;
         }
       }
       .order {
@@ -83,11 +86,16 @@
         gap: 10px;
         width: 200px;
         height: 50px;
-        border: 1px solid #374c58;
-        border-radius: 68px;
+        border: 1px solid rgba(254, 254, 254, 0.3);
+        border-radius: 15px;
         margin: 0 auto;
-        color: ghostwhite;
+        color: white;
         font-family: "poppins", sans-serif;
+
+        &:hover {
+          background-color: #fff;
+          color: rgba(42, 182, 212, 1);
+        }
       }
     }
 
@@ -117,9 +125,12 @@
           color: #172755;
           margin-bottom: 0;
         }
+        .bottom {
+          color: #060f28;
+        }
       }
       .order {
-        background: linear-gradient(to top, #37ecba 0%, #72afd3 100%);
+        background: rgba(42, 182, 212, 1);
       }
     }
   }
