adding meta for gogle verification

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,8 @@ html {
 
 body {
   margin: 0;
-  background-color: #06283d;
+  // background-color: #06283d;
+  background-color: black;
 }
 
 * {
